--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,8 @@
 name: Go
-on: [push]
-jobs:
 
+on: [push]
+
+jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -15,12 +16,16 @@ jobs:
       uses: actions/checkout@v2
     - name: Get dependencies
       run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+        export GO111MODULE=on
+        go mod download
     - name: Lint
-      run: scopelint ./...  
+      run: |
+        scopelint ./... 
+    - name: fmt
+      run: go fmt ./...      
+    - name: vet
+      run: go vet ./...
     - name: Build
       run: go build -v .
+
+  
